--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="icon" type="image/png" href="icons/icon-512.png">
 
 <link rel="stylesheet" href="style.css">
-
+	<link rel="stylesheet" href="MyStyle.css">
 
 </head>
 <body>
